# aegisais

./: .coverage  .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CODE_QUALITY.md  CONTRIBUTING.md  DEMO_GUIDE.md  FEATURES_IMPLEMENTED.md  FIXES_SUMMARY.md  IMPLEMENTATION_PLAN.md  MISSING_FEATURES.md  PHASE_3_VALIDATION.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  UNTRACKED_FILES_INVENTORY.md  codecov.yml  coverage.xml  docker-compose.yml  package-lock.json  package.json
apps/api/: .coverage  .dockerignore  DEPENDENCIES.md  Dockerfile  MIGRATION_GUIDE.md  Makefile  README_MIGRATIONS.md  coverage.xml  pyproject.toml  run_migrations.sh  start.sh  start_with_migrations.sh
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/scripts/: README.md  check_lockfiles.sh  compile_lockfiles.sh  generate_d04_interop_samples.py  generate_d04_receiver_rehearsal.py  smoke_llm.py  test_bathymetry.py  test_depth_api.py  test_gebco.py  test_gebco_debug.py  test_gebco_layers.py  test_gebco_v130.py
apps/api/tests/: __init__.py  conftest.py  test_aisstream_integration.py  test_alert_evidence_hash.py  test_alert_idempotency.py  test_alert_worker_audit.py  test_alerts_vessels_api.py  test_assets_iot_api.py  test_audit_api.py  test_audit_coverage_matrix.py  test_audit_service.py  test_auth_api.py  test_auth_mfa.py  test_auth_refresh.py  test_av_scanner.py  test_billing_usage_ledger.py  test_competitor_import.py  test_contract_validator.py  test_event_schemas.py  test_fused_rule_and_incidents.py  test_import_ais_api.py  test_incidents_api.py  (+24 more)
backend/: Dockerfile  MIGRATION_GUIDE.md  README_MIGRATIONS.md  pyproject.toml  start.sh  start_with_migrations.sh
backend/alembic/: env.py
backend/app/: db.py  main.py  models.py  schemas.py  settings.py
backend/scripts/: generate_demo_data.py
backend/tests/: test_detection_rules.py  test_itdae_features.py  test_itdae_rules.py
docs/: SLA.md  (+36 more)
(+495 files in other folders)
