[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisais"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.135.1",
  "uvicorn[standard]==0.42.0",
  "pydantic==2.12.5",
  "email-validator==2.2.0",
  "pydantic-settings==2.14.2",
  "sqlalchemy==2.0.48",
  "greenlet==3.3.2",
  "alembic==1.18.4",
  "psycopg[binary]==3.3.3",
  "python-multipart==0.0.32",
  "pandas==3.0.1",
  "zstandard==0.25.0",
  "redis==7.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-jose[cryptography]==3.5.0",
  "pyotp==2.9.0",
  "cryptography>=46.0.6",
  "ecdsa>=0.19.2",
  "structlog==25.5.0",
  "prometheus-fastapi-instrumentator==7.1.0",
  "prometheus-client==0.24.1",
  "reportlab==4.2.5",
  "httpx>=0.27,<1",
  "websockets>=12,<16",
  "aiohttp>=3.14,<4",
  "idna>=3.15",
  "urllib3>=2.7.0",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "mypy==1.18.2",
  "pip-audit==2.10.0",
  "pip-tools==7.5.3",
  "pytest==9.0.3",
  "pytest-asyncio==1.4.0",
  "pytest-cov==6.2.1",
  "ruff==0.14.0",
  "fakeredis==2.33.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=xml --cov-report=term-missing --cov-branch"
testpaths = ["tests"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.setuptools]
packages = ["app"]
